--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: My projects
-subtitle: Below are my projects I've worked on.
+subtitle: Below are my projects.
 use-site-title: true
 ---
 
